bugfix: Fix ERR_SOCKET_TIMEOUT during docker-compose by downgrading the node version, fix config, refactor AppServer and update tsconfig for better use of tsoa.
