# server/spec/swagger.json
@@ -108,7 +108,17 @@
 							"type": "string"
 						}
 					}
-				]
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IToDo"
+							}
+						}
+					}
+				}
 			},
 			"delete": {
 				"operationId": "DeleteOne",
